<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <Button
        android:id="@+id/button23"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="372dp"
        android:onClick="onPlay23"
        android:text="@string/nothing"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/px"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        tools:layout_editor_absoluteY="153dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="84dp"
        android:onClick="onPlay2"
        android:text="7"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        tools:layout_editor_absoluteX="492dp" />

    <Button
        android:id="@+id/button22"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="120dp"
        android:onClick="onPlay22"
        android:text="4"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        tools:layout_editor_absoluteX="496dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/jogador_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="84dp"
        android:onClick="onPlay19"
        android:text="9"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        tools:layout_editor_absoluteX="809dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/po"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        tools:layout_editor_absoluteY="153dp"
        tools:text="@string/po" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/points"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="380dp"
        android:onClick="onPlay20"
        android:text="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/jogador_1_nick"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="496dp"
        android:layout_marginTop="372dp"
        android:onClick="onPlay16"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="572dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="120dp"
        android:onClick="onPlay17"
        android:text="5"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="1127dp" />

    <Button
        android:id="@+id/button25"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="380dp"
        android:onClick="onPlay25"
        android:text="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="72dp"
        android:onClick="onPlay18"
        android:text="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

</android.support.constraint.ConstraintLayout>